# WFS-DIY

./: .gitignore  .gitmodules  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  WFS-DIY.jucer
.claude/: settings.local.json
Documentation/: Beta_Distribution_Checklist.md  CLAUDE.md  Concept_Chat_1_2025-01-22.md  ENSLL_SON_GUESNEY_2020.docx  GPU_AUDIO_SDK_SETUP.md  GPU_Plugin_Smoke_Test.md  Linux_GPU_Enablement.md  OSC-Remote_InputParameterTab.csv  PRD.md  Phase1_README.md  Prompt_UI1.txt  README.md  WFS-UI.ods  (+22 more)
Plugin/: .gitignore  CMakeLists.txt  README.md
Plugin/Installer/: WFS-DIY-Plugins.iss  build-pkg.sh  build-tarball-linux.sh
Plugin/Scripts/: build-all.ps1  build-all.sh
Plugin/Source/Bridge/: Bridge.cpp
Plugin/Source/JuceHeaderStub/: JuceHeader.h
Plugin/Source/Master/: MasterEditor.cpp  MasterEditor.h  MasterMain.cpp  MasterProcessor.cpp  MasterProcessor.h
Plugin/Source/Shared/: BridgeApi.h  BridgeLoader.cpp  BridgeLoader.h  DiagnosticLog.h  OscQueryClient.cpp  OscQueryClient.h  OscTransport.cpp  OscTransport.h  PluginLookAndFeel.cpp  PluginLookAndFeel.h  RateLimiter.cpp  RateLimiter.h  StatusLogView.h  TargetProfile.cpp  TargetProfile.h  VariantConfig.h
Plugin/Source/Shared/widgets/: WfsBidirectionalSlider.h  WfsParameterAttachments.h  WfsRotationDial.h  WfsSliderBase.h  WfsStandardSlider.h  WfsWidthExpansionSlider.h
Plugin/Source/Track/: TrackEditor.cpp  TrackEditor.h  TrackProcessor.cpp  TrackProcessor.h
Plugin/Source/Variants/: AdmCartesianMain.cpp  AdmPolarMain.cpp  CartesianMain.cpp  CylindricalMain.cpp  SphericalMain.cpp
Plugin/docs/: PRD.md
Processors/wfs_input_buffer_processor/: BUILD.md  CMakeLists.txt  PROCESSOR  README.md
Processors/wfs_input_buffer_processor/wfs_input_buffer_processor/: CMakeLists.txt  CMakeLists.var.cmake
Processors/wfs_input_buffer_processor/wfs_input_buffer_processor/include/wfs_input_buffer_processor/: WfsInputSpecification.h
Processors/wfs_input_buffer_processor/wfs_input_buffer_processor/src/: WfsInputDeviceCodeProvider.cpp  WfsInputDeviceCodeProvider.h  WfsInputInputPort.cpp  WfsInputInputPort.h  WfsInputModule.cpp  WfsInputModule.h  WfsInputModuleInfoProvider.cpp  WfsInputModuleInfoProvider.h  WfsInputModuleLibrary.cpp  WfsInputProcessor.cpp  WfsInputProcessor.h
Processors/wfs_input_buffer_processor/wfs_input_buffer_processor/src/cuda/: Properties.h  WfsInputProcessor.cu  WfsInputProcessor.cuh
spatcore/: CMakeLists.txt  SpatcoreAudioCompileCheck.cpp
spatcore/cmake/: SpatcoreCompileFlags.cmake
spatcore/control/mcp/: MCPChangeRecords.cpp  MCPChangeRecords.h  MCPDispatcher.cpp  MCPDispatcher.h  MCPLogSink.h  MCPPromptRegistry.cpp  MCPPromptRegistry.h  MCPResourceRegistry.cpp  MCPResourceRegistry.h  MCPTierEnforcement.cpp  MCPTierEnforcement.h  MCPToolRegistry.cpp  MCPToolRegistry.h  MCPTransport.cpp  MCPTransport.h  MCPUndoHooks.h
spatcore/control/osc/: NetworkStringUtils.h  OSCIngestQueue.cpp  OSCIngestQueue.h  OSCParser.h  OSCRateLimiter.cpp  OSCRateLimiter.h  OSCReceiverWithSenderIP.cpp  OSCReceiverWithSenderIP.h  OSCSerializer.h  OSCTCPReceiver.cpp  OSCTCPReceiver.h  OscTransportTypes.h  TrackingIngestQueue.cpp  TrackingIngestQueue.h
spatcore/control/state/: TreeParameterStore.cpp  TreeParameterStore.h  XmlPersistence.cpp  XmlPersistence.h
spatcore/controllers/: ControllerDevice.h  ControllerEvent.h  ControllerMapping.h  SpatcoreControllersCompileCheck.cpp
spatcore/controllers/lightpad/: LightpadDevice.h  LightpadManager.h  LightpadTypes.h
spatcore/controllers/spacemouse/: SpaceMouseDevice.h
spatcore/controllers/streamdeck/: StreamDeckDevice.h  StreamDeckManager.h  StreamDeckPage.h  StreamDeckRenderer.h
spatcore/controllers/touch/: TouchDeviceMapping.h  TouchManager.h  TouchManagerStub.h
spatcore/controllers/touch/linux/: EvdevTouchDevice.cpp  EvdevTouchDevice.h  EvdevTouchManager.cpp  EvdevTouchManager.h
spatcore/controllers/xencelabs/: QuickKeysManager.h  QuickKeysPage.h  XencelabsDevice.h
spatcore/dsp/: DelayTargetSmoother.h  FrDiffusionModel.h  InputSpeedLimiter.h  LFOWaveforms.h  LiveSourceLevelDetector.h  NumericGuards.h  OutputEQBiquadFilter.h  OutputLevelDetector.h  ReverbBiquadFilter.h  TrackingPositionFilter.h  WFSBiquadFilter.h  WFSHighShelfFilter.h
spatcore/gpu/: CudaFdnBackend.cpp  CudaFdnBackend.h  CudaIrBackend.cpp  CudaIrBackend.h  CudaIrKernels.h  CudaObBackend.cpp  CudaObBackend.h  CudaObKernels.h  CudaSdnBackend.cpp  CudaSdnBackend.h  CudaWfsBackend.cpp  CudaWfsBackend.h  CudaWfsKernels.h  FdnGpuBackend.h  FdnHostConfig.h  GpuAsyncPipeline.h  GpuBackendFactory.h  GpuBackendInterface.h  GpuDeviceManager.h  GpuHostWorkPool.h  GpuLevelMeters.h  HipFdnBackend.cpp  HipFdnBackend.h  HipIrBackend.cpp  HipIrBackend.h  HipObBackend.cpp  HipObBackend.h  HipSdnBackend.cpp  HipSdnBackend.h  HipWfsBackend.cpp  HipWfsBackend.h  IrConvHostState.h  IrGpuBackend.h  IrHostFft.h  MetalFdnBackend.h  MetalFdnBackend.mm  MetalFdnKernels.h  MetalIrBackend.h  MetalIrBackend.mm  MetalObBackend.h  (+14 more)
spatcore/gpu/plugin/: GpuVendorPlugin.cpp
spatcore/reverb/: ReverbAlgorithm.h  ReverbEngine.h  ReverbFDNAlgorithm.h  ReverbFDNAlgorithmGPU.h  ReverbFeedThread.h  ReverbIRAlgorithm.h  ReverbIRAlgorithmGPU.h  ReverbPostProcessor.h  ReverbPreProcessor.h  ReverbSDNAlgorithm.h  ReverbSDNAlgorithmGPU.h
spatcore/rt/: AudioParallelFor.h  AudioWorkgroupCoordinator.h  LockFreeRingBuffer.h  RealtimeThreadUtil.h  ReverbDiagnostics.h  RtSnapshot.h  RtThreadPriority.h  SharedInputRingBuffer.h
spatcore/tests/: CMakeLists.txt  SpatcoreTests.cpp
spatcore/tests/standalone/: CMakeLists.txt
spatcore/tests/standalone/JuceHeaderStub/: JuceHeader.h
spatcore/tools/codegen/: generate_mcp_tools.py
spatcore/tools/gpu/: build-gpu-plugins.ps1  build-gpu-plugins.sh
spatcore/wfs/: InputBufferAlgorithm.h  InputBufferProcessor.h  NativeGpuOutputBufferAlgorithm.h  NativeGpuWfsAlgorithm.h  OutputBufferAlgorithm.h  OutputBufferProcessor.h
tools/validation/offline-render/: CMakeLists.txt  main.cpp  scenarios.h  sha256.h
tools/validation/offline-render/baselines/: win-dev-nvidia-gpu.json  win-dev-nvidia.json
(+537 files in other folders)
